# FreeV2G

./: ev.json  pyproject.toml
freev2g/: Application.py  EthernetAdapter.py  Ev.py  Evse.py  FramingInterface.py  SUTAdapter.py  SpiAdapter.py  Whitebeet.py
