
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "freev2g"
version = "0.0.0"
description = "white_beet simulation package"
authors = ["Production Quality Engineering Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cython = "*"
scapy = "^2.6.1"
python-libpcap = "^0.5.2"

